# EntryCheck

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  README.md  dec by saran 1.md  dec by saran 2.md  dec by saran 3.md  dec by saran 4.md  dec by saran 5.md  dec by saran 6.md  dec by saran 7.md  pyproject.toml
.github/workflows/: artifact-validation.yml  quality.yml  scientific-smoke.yml  tests.yml
.reentry/: reentry.db
ExplainCheck-Phase0-Research-Package/: COMPARISON.md  DATASET_REVIEW.md  PREREGISTRATION_READY.md  PROTOCOL_V1.0.md  PUBLICATION_STRATEGY.md  README.md  SHA256SUMS.txt  run_phase0.py
ExplainCheck-Phase0-Research-Package/artifacts/pilot-v1/: benchmark.json  model-card.md  model-performance.csv  run-manifest.json  tidy-results.csv
amendments/: 2026-07-14-pre-registration-clarification.md  2026-07-15-stage4-premature-start.md  2026-07-21-coverage-policy.md
artifacts/confirmatory/: .gitkeep
artifacts/exploratory/: .gitkeep
artifacts/pilot/: .gitkeep  stage1-environment.json
artifacts/pilot/stage2-synthetic-v1/: SHA256SUMS.txt  benchmark.json  failures.csv  manual-metric-validation.json  model-card.md  model-performance.csv  raw-results.parquet  run-manifest.json  tidy-results.csv
artifacts/pilot/stage3-explainer-integration-v1/: SHA256SUMS.txt  benchmark.json  integration-validation.json  model-card.md  model-performance.csv  raw-results.parquet  run-manifest.json  tidy-results.csv
artifacts/pilot/stage3-finalization-v1/: artifact-checksums.json  determinism-matrix-provenance.json  determinism-matrix.json  kernelshap-multiseed-summary.json  kernelshap-multiseed.csv  lime-multiseed-summary.json  lime-multiseed.csv  run-manifest.json
artifacts/pilot/stage4-infrastructure-v1/: README.md  artifact-checksums.json  infrastructure-validation.json  run-manifest.json  suppression-audit.json  test-inventory.json
configs/: confirmatory.yaml  pilot.yaml  protocol-v1.yaml  smoke.yaml
experiments/confirmatory/: .gitkeep
experiments/manifests/: .gitkeep
experiments/pilots/: .gitkeep
paper/figures/: .gitkeep
paper/manuscript/: .gitkeep
paper/references/: .gitkeep
paper/tables/: .gitkeep
scripts/: compute_test_id_hash.py  generate_stage4_checksums.py
scripts/validation/: stage3_determinism_matrix.py  stage3_kernelshap_multiseed.py  stage3_lime_multiseed.py
src/explaincheck/: __init__.py
src/explaincheck/cli/: __init__.py  main.py
src/explaincheck/config/: __init__.py  loader.py
src/explaincheck/contracts/: __init__.py  enums.py  explanation_batch.py  models.py
src/explaincheck/datasets/: __init__.py  base.py  synthetic.py
src/explaincheck/explainers/: __init__.py  base.py  exact_linear.py  kernel_shap.py  lime_adapter.py  tree_shap.py
src/explaincheck/metrics/: __init__.py  base.py  contexts.py
src/explaincheck/model_cards/: __init__.py
src/explaincheck/models/: __init__.py  base.py  logistic_regression.py  random_forest.py  sklearn_lr.py  xgboost_adapter.py
src/explaincheck/pilot/: __init__.py  runner.py
tests/: __init__.py  conftest.py
tests/golden/: __init__.py  test_stage2_golden.py
tests/integration/: test_stage2_cli.py
tests/property/: __init__.py  test_stage2_properties.py
tests/scientific/: __init__.py
tests/unit/: test_stage1_foundation.py  test_stage2_components.py  test_stage2_determinism.py  test_stage3_adapters.py  test_stage3_metric_contracts.py  test_stage4_metrics.py
(+36 files in other folders)
